Assert when cancelling Append window #70048

Closed
opened 2019-09-19 02:04:04 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: 741d7d60ed (latest Blender2.8 HEAD)
Worked: blender 2.80 stable

Short description of error
Assert crash when cancelling the appending operator from the Shading workspace.

Exact steps for others to reproduce the error

  • Switch to the "Shading" workspace
  • Go to File → Append
  • Cancel the new window

BLI_assert failed: //source/blender/editors/screen/screen_edit.c:1151, ED_screen_restore_temp_type(), at '(sa->flag & AREA_FLAG_TEMP_TYPE) == 0'
Full backtrace: P1108

**Blender Version** Broken: 741d7d60ed (latest Blender2.8 HEAD) Worked: blender 2.80 stable **Short description of error** Assert crash when cancelling the appending operator from the Shading workspace. **Exact steps for others to reproduce the error** * Switch to the "Shading" workspace * Go to File → Append * Cancel the new window `BLI_assert failed: //source/blender/editors/screen/screen_edit.c:1151, ED_screen_restore_temp_type(), at '(sa->flag & AREA_FLAG_TEMP_TYPE) == 0'` Full backtrace: [P1108](https://archive.blender.org/developer/P1108.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Julian Eisel was assigned by Dalai Felinto 2019-09-19 02:10:16 +02:00
Author
Owner

This wasn't happening in 2.80. It may or may not be related to the file browser changes, but odds are, they are.
Release mode is fine so the assert may be a false alarm.

This wasn't happening in 2.80. It may or may not be related to the file browser changes, but odds are, they are. Release mode is fine so the assert may be a false alarm.

This issue was referenced by 4a5af65fe9

This issue was referenced by 4a5af65fe9e3728f5ed2945044a957bafea736b3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70048
No description provided.